[build] Updated pom and added troubleshooting