@@ -13,7 +13,7 @@ mvn package
 
 ### Running
 ```shell
-mvn clean javafx:run
+mvn javafx:run
 ```
 
 or
@@ -27,8 +27,23 @@ java -cp target/SAC-[version]-SNAPSHOT.jar sac.App
 2. Run -> Edit Configurations -> Add New Configuration -> Maven
 3. Change `Command Line` to `package`
 
+
 ## Documentation
 
 [Design document](/docs/design)
+
+## Troubleshooting
+
+### 1. Running Maven `javafx:run` in IntelliJ uses system default JDK rather than project JDK.
+
+Uncheck `Include system environmental variables` in run configuration.
+
+### 2. Error: JavaFX runtime components are missing, and are required to run this application
+This should not happen when using `mvn javafx:run`. In IntelliJ,
+add `VM options` in run configuration, with the following
+```
+--module-path "[path to javafx]\lib" --add-modules javafx.controls,javafx.fxml
+```
+
 
 Copyright (c) 2022 Stand Alone Complex
